# Raspberry_Pi_Pico

./: README.md
Micropython/BLink_LED/: Blinky.py  main.py
pico_multicore/: CMakeLists.txt  README.md  multicore_temp.c
